--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -144,7 +144,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -197,7 +197,7 @@ believe a workplace food program is something employees should love and look
 developing and implementing metrics and reporting to improve our business and
 ?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -273,7 +273,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -346,11 +346,11 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://carwow.workable.com/j/A1267A5BE1'>carwow - Jobs: Business Intelligence Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://carwow.workable.com/j/A1267A5BE1'>carwow - Jobs: Business Intelligence Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -470,11 +470,11 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/longos/job/oTGrafwU'>Longo's Careers - Business Intelligence (BI) Analyst - Supply Chain (6 Month Contract)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/longos/job/oTGrafwU'>Longo's Careers - Business Intelligence (BI) Analyst - Supply Chain (6 Month Contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
